--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -2,6 +2,9 @@
 title: "Welcome To My Blog"
 lang: pt-BR
 author: "Janderson B Abreu"
+page-layout: full
+toc: true
+toc-depth: 5
 date: "2022-12-22"
 categories: [news]
 ---
