--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -12,3 +12,28 @@ This is a post with executable code.
 ```{python}
 1 + 1
 ```
+
+```{python}
+a = 15
+b = 30
+a+b
+```
+
+```{python}
+import pandas as pd
+import numpy as np
+```
+
+```{python}
+lista = {'col 1':[3,5,7,9], 'col 2':['A','B','Z','X']}
+df = pd.DataFrame(data=lista)
+df
+```
+
+```{python}
+import plotly.express as px
+
+fig = px.line(x=["a","b","c"], y=[1,3,2], title="sample figure")
+print(fig)
+fig.show()
+```
